# proyecto-agente

./: .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  engramas_agente.json  instalar_super_agente.py  opencode.json  procedimientos.json  pyproject.toml  requirements.txt  server.py  skill_index.json  test_mcp.py
docs/: guia_facil.md  instalacion.md
skills/: architect.py  coder.py  config_lm.py  engram.py
skills/gamedev/: pygame_combat.py  pygame_entities.py  pygame_renderer.py
skills/gitdev/: __init__.py  github_master.py
skills/skill_creator/: __init__.py
skills/webdev/: backend_php.py  backend_python.py  buscar_web.py  css_ninja.py  react_expert.py  sql_expert.py
